--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+.state-effects {
+ @apply hover:scale-105 focus:scale-105 active:scale-[1.02] transition;
+}
+
 
 /* SCROLLBAR STYLING */
 /* Chrome, Edge, and Safari */
